[package]
name = "mina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
# rev 79f99e347dba72ed8217bdf5791e6ea2170ff975
mina-tree = { path = "../../ledger" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "94fd3389acdf6986aa6731b0e64f5cd8b0db5eed" }
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }

[build-dependencies]
cbindgen = "0.24.3"

[dev-dependencies]
num-bigint = "0.4.3"
serde = "1.0.160"
serde_json = "1.0.96"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
