set(LIBRARY ethash-cl)
set(CMAKE_BUILD_TYPE Release)

if (NOT OPENCL_FOUND)
	find_package(OpenCL)
endif()
if (OPENCL_FOUND)
	include_directories(${OPENCL_INCLUDE_DIRS})
	include_directories(..)
	add_library(${LIBRARY} ethash_cl_miner.cpp ethash_cl_miner.h)
	TARGET_LINK_LIBRARIES(${LIBRARY} ${OPENCL_LIBRARIES} ethash)
endif()